# rust-playground

./: .gitignore  Cargo.toml  README.md  test-journal.json
src/: .main.rs.swp  automata.rs  cell.rs  fps_utils.rs  grid.rs  main.rs
src/automata/: cell.rs  grid.rs  mod.rs
src/concurrency/: basic_mpsc.rs  basic_threads.rs  mod.rs  shared_state.rs
src/cpal/: mod.rs
src/cpal_test/: mod.rs
src/fast_type/: mod.rs
src/framebuffer/: mod.rs
src/ggez_test/: collision.rs  mod.rs
src/memory/: lifetimes.rs  mod.rs  ownership.rs
src/opengl_test/: fragment.glsl  juliaset.glsl  mod.rs  vertex.glsl
src/ownership/: mod.rs
src/rust_book/: chapter_10.rs  chapter_11.rs  chapter_12.rs  chapter_13.rs  chapter_14.rs  chapter_15.rs  chapter_16.rs  chapter_17.rs  chapter_18.rs  chapter_19.rs  chapter_2.rs  chapter_20.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  chapter_6.rs  chapter_7.rs  chapter_8.rs  chapter_9.rs  lib.rs  mod.rs
src/todo_list/: mod.rs  tasks.rs
src/traits/: mod.rs
