[package]
name = "rust_playground"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
rand = "0.7.0"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["ttf"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
