[package]
name = "rust_playground"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.0"
rand = "0.7.0"
cgmath = "0.18.0"
anyhow = "1.0"
ggez = "0.5.1"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
