[package]
name = "rust_playground"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
rand = "0.8.3"
cgmath = "0.18.0"
anyhow = "1.0"
structopt = "0.3"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["ttf"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"